# IIS2025

./: .gitignore  data.dvc  pyproject.toml  test.py
.dvc/: config
.github/workflows/: fetch_data.yml
data/preprocessed/air/: E410.csv
data/raw/air/: air_data.xml
src/data/: predprocess_data.py
