[tool.poetry]
name = "testtest"
version = "0.1.0"
description = ""
authors = ["Haris Brulic <haris.brulic@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
requests = "^2.32.3"
lxml = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
